# komunitech

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py
app/: .env.template  .gitignore  Makefile  UNIT_TESTS.md  __init__.py  app-dev.db  app.db  command.py  config.py  create_structure.bat  forms.py  models.py  pyproject.toml  routes.py  test-requirements.txt
app/.github/: dependabot.yml
app/.github/workflows/: cd.yml  ci.yml
app/database/: base.py  commands.py  models.py
app/nginx/conf.d/: komunitech.conf
app/routes/: __init__.py  admin_routes.py  api_routes.py  auth_routes.py  comment_routes.py  health_routes.py  kebutuhan_routes.py  main_routes.py  project_routes.py  search_routes.py  support_routes.py  user_routes.py
app/scripts/: init.sql
app/services/: audit_service.py  auth_service.py  category_service.py  comment_service.py  file_service.py  kebutuhan_service.py  notification_service.py  project_service.py  search_service.py  support_service.py  user_service.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: ajukan.html  base.html  buat_project.html  daftar.html  daftar_kebutuhan.html  daftar_project.html  detail.html  detail_project.html  dukungan_saya.html  index.html  kebutuhan_saya.html  login.html  project_saya.html  tentang.html
app/templates/admin/: categories.html
app/templates/auth/: daftar.html  login.html
app/templates/kebutuhan/: create.html  detail.html  list.html
app/templates/project/: create.html  detail.html  edit.html  list.html
app/templates/user/: kebutuhan.html  projects.html  supports.html
app/tests/: README.md  conftest.py
app/tests/integration/: test_auth_routes.py  test_project_routes.py
app/tests/unit/: test_models.py
app/tests/unit/test_services/: test_auth_service.py  test_project_service.py
app/utils/: auth_utils.py  decorators.py  file_utils.py  helpers.py  pagination.py
tests/services/: auth_test.py
